# ditchdb

./: .env.example  .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.storybook/: main.ts  preview.ts
backend/: .gitignore  conftest.py  pytest.ini
backend/backend/: settings.py  urls.py
backend/ditchdb/: admin.py  apps.py  dev_views.py  models.py  serializers.py  views.py
backend/ditchdb/migrations/: 0001_initial.py  0001_initial_squashed_0005_delete_propertyownership.py  0002_organization_owner_person_owner.py  0002_orionproperty_lastupdated.py  0002_remove_property_has_changes.py  0002_rename_partyid_orionpartyaddr_party_and_more.py  (+15 more)
backend/mtorion/: apps.py  models.py
cypress/: tsconfig.json
cypress/support/: commands.js
docker/: Storybook.Dockerfile  import-orion.Dockerfile  qgis.Dockerfile
e2e/: .gitignore  cucumber.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
e2e/features/: properties.feature
etl/: find_changes.sh  import_orion_into_postgres.sh  mark_indistrict.py  process_changes.py  settings.py
etl/etl/: processes.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.storybook/: preview.ts
frontend/src/: main.tsx
testing/: conftest.py  pytest.ini
testing/e2e/: properties.feature  test_properties.py
testing/factories/: __init__.py
(+70 files in other folders)
